# phychip

./: .gitignore  NOTICE  README.md
athma-train/: pyproject.toml
athma-train/athma_train/: hub.py  spice_gate.py  tracking.py
athma-train/athma_train/env/: base.py  reward_card.py  spice_env.py
athma-train/athma_train/harnesses/: _measure_utils.py  bandgap.py  boost.py  bridge-ina.py  buck.py  buffer.py  cs-stage.py  current-mirror.py  current-sense.py  diff-amp.py  diff-pair.py  differentiator.py  gain-trim.py  h-bridge.py  ina.py  integrator.py  inv-amp.py  ldo.py  level-shift.py  noninv-amp.py  sallen-key.py  schmitt.py  summing-amp.py  tia.py
athma-train/scripts/: analogcoder_baseline.py  build_rft_traces.py  build_rlvr_specs_v2_verified.py  closed_loop_probe.py  eval_on_bench_v1.py  eval_passk_bench_v2.py  grade_reward_hacks.py  train_lora_grpo.py  train_lora_sft.py  verify_sft_masking.py  wellposed_gate_bench_v2.py
athma-train/tests/: test_spice_env.py
athma-train/tests/harnesses/: test_bandgap.py  test_boost.py  test_bridge-ina.py  test_buck.py  test_buffer.py  test_cs-stage.py  test_current-mirror.py  test_current-sense.py  test_diff-amp.py  test_diff-pair.py  test_differentiator.py  test_gain-trim.py  test_h-bridge.py  test_ina.py  test_integrator.py  test_inv-amp.py  test_ldo.py  test_level-shift.py  test_noninv-amp.py  test_sallen-key.py  test_schmitt.py  test_summing-amp.py  test_tia.py
eval_sets/bench_v1/: bench_v1.jsonl  (+1 more)
final_report/: PhyChip_Technical_Report.md
plan/: grpo_launch_l40.sh  grpo_pod_run.sh  grpo_watchdog.sh  resume_grpo.sh
(+2 files in other folders)
