# Minimal pyproject.toml — only what's needed to run the SpiceEnv unit tests.
# The full version (with optional-dependencies for nanotron/TRL/veRL/etc.) is
# preserved at someday/athma-train/pyproject.toml.original for when training starts.

[project]
name = "athma-train"
version = "0.0.1"
description = "PhyChip training pipeline — currently only the SpiceEnv reward layer is implemented."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Nithin Reddy", email = "nithingovindugari@gmail.com" }]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]
eval = [
  "transformers>=4.46",
  "huggingface_hub>=0.26",
  "datasets>=3.0",
  "tokenizers>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athma_train"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
